<resources>
    <string name="app_name">CI Assistant</string>

    <!-- Token Registration Fragment -->
    <string name="text_field_hint_circle_ci_token">CircleCI Token</string>
    <string name="action_register_circle_ci_token">Register Token</string>
    <string name="action_create_circle_ci_token">Create Token</string>
    <string name="action_register_circle_ci_token_short">Register</string>
    <string name="text_field_register_your_circleci_token">Register your CircleCI Token</string>
    <string name="text_field_circle_ci_token_or">Or</string>
    <string name="invalid_token">Not a valid token</string>
    <string name="registration_failed">Could not register token, verify token and retry</string>
    <string name="welcome">Welcome %1s</string>

    <!-- Recent Builds Fragment -->
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="queued">Queued</string>
    <string name="not_running">Not Running</string>
    <string name="running">Running</string>
    <string name="not_run">Not Run</string>
    <string name="rebuild">rebuild</string>
    <string name="loading_recent_builds_failed">Could not load recent builds.</string>
    <string name="loading_projects_failed">Could not load projects.</string>
    <string name="loading_pipelines_failed">Could not load pipelines.</string>

    <!-- Main Activity -->
    <string name="title_recent_builds">Pipelines</string>
    <string name="title_token_registration">Register Token</string>
    <string name="pipeline_number">#%1$s</string>

    <!-- Token is temporary and will be deleted after approval -->
    <string name="temp_token">b3af0c08cef1c282f3dc5cdf646576b0bf181536</string>

</resources>
